@@ -1,5 +1,9 @@
 2.0.2
 	- Added syn123_distversion() and syn123_libversion().
+	- Added switch SYN123_PORTABLE_API to hide off_t (consinstent with
+	  libmpg123).
+	- Added direct int64_t prototypes (syn123_resample_total64() and
+	  syn123_resample_inttotal64().
 
 1.0.1
 	- initial version
